SEVERE: URGENT: Fix pipeline list status (When status is an inactive status it will show this modal) alignment way off (plus its ugly)

--- a/app/stylesheets/_layout.scss
+++ b/app/stylesheets/_layout.scss
@@ -25,7 +25,7 @@ body {
   height: 100%;
 
   .jspContainer {
-    z-index: 99;
+    z-index: 8;
   }
 }
 
