--- a/app/stylesheets/forms/_checklist.scss
+++ b/app/stylesheets/forms/_checklist.scss
@@ -3,9 +3,10 @@
     display: inline-block;
     position: relative;
     top: 3px;
-    width: 40px;
+    width: auto;
     font-weight: bold;
     font-size: 18px;
+    margin-left: 0;
   }
 }
 .additional-check{
